@@ -17,8 +17,9 @@ Contents
 
 **Changes introduced in 0.2.1
 
-[Fix]		Added validation for path finder
-[Enhancement]	Include template name and images when cloning
+[Enhancement]	Ports are represented by icons.
+[Fix]		Added validation for path finder.
+[Enhancement]	Include template name and images when cloning.
 
 **Changes introduced in 0.2.0
 
